example/secondfile/objects/API_Tracking__c.object
<CustomObject>
    <fields>
        <fullName>API_Client_ID__c</fullName>
        <inlineHelpText>If &quot;API Connection Type&quot; is DIRECT, then &quot;API Client ID&quot; value is the ID assigned to the SP.
If &quot;API Connection Type&quot; is Third Party, then &quot;API Client ID&quot; value is the ID assigned to the Third Party(e.g. MasterStream&apos;s Mulesoft Client ID).</inlineHelpText>
        <label>API Client ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Connection_Type__c</fullName>
        <label>API Connection Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Direct Connect</fullName>
                </value>
                <value>
                    <fullName>Third Party</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>API_Platform_Type__c</fullName>
        <label>API Platform</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CSI</fullName>
                </value>
                <value>
                    <fullName>Flow Designer</fullName>
                </value>
                <value>
                    <fullName>MuleSoft</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>API_Set__c</fullName>
        <label>API Set</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AIA Quoting</fullName>
                </value>
                <value>
                    <fullName>EQT</fullName>
                </value>
                <value>
                    <fullName>Mobility</fullName>
                </value>
                <value>
                    <fullName>Pre-Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>API_Version__c</fullName>
        <label>API Version</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>API Tracking</relationshipLabel>
        <relationshipName>API_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Go_Live__c</fullName>
        <label>Actual Go Live</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approved_for_Production__c</fullName>
        <label>Approved for Production</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ceased_Enablement__c</fullName>
        <label>Ceased Enablement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Connected_to_Prod_Environment__c</fullName>
        <label>Connected to Prod Environment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Connector_Client_MechID__c</fullName>
        <inlineHelpText>This field is required only when “API Connection Type” is “Third Party” and &quot;Prod Profile Requested&quot; is populated with a date.

Enter the MECH_ID of the SP on whose behalf third-party Connector is accessing AT&amp;T systems.

MAX LENGTH: 10 Characters</inlineHelpText>
        <label>Connector Client MechID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Documentation_Sent__c</fullName>
        <label>Documentation Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enablement_Kickoff_Meeting__c</fullName>
        <label>Enablement Kickoff Meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mech_ID__c</fullName>
        <label>Mech ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Onboarding_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Onboarding Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>API_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prod_CSR_Received__c</fullName>
        <label>Prod CSR Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prod_CSR_Requested__c</fullName>
        <label>Prod CSR Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prod_IP_Access_Requested__c</fullName>
        <label>Prod IP Access Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prod_Profile_Received__c</fullName>
        <label>Prod Profile Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prod_Profile_Requested__c</fullName>
        <label>Prod Profile Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prod_SSL_Cert_Requested__c</fullName>
        <label>Prod SSL Cert Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFDC_SP_Account_ID__c</fullName>
        <formula>Account__r.SFDC_SP_Account_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFDC SP Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sandbox_CSR_Received__c</fullName>
        <label>Sandbox CSR Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sandbox_CSR_Requested__c</fullName>
        <label>Sandbox CSR Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sandbox_Profile_Received__c</fullName>
        <label>Sandbox Profile Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sandbox_Profile_Requested__c</fullName>
        <label>Sandbox Profile Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sandbox_SSL_Cert_Requested__c</fullName>
        <label>Sandbox SSL Cert Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Signed_Prod_SSL_Cert_Received__c</fullName>
        <label>Signed Prod SSL Cert Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Signed_Sandbox_SSL_Cert_Received__c</fullName>
        <label>Signed Sandbox SSL Cert Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_Production_Go_Live__c</fullName>
        <label>Target Production Go Live</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WSDL_Sent__c</fullName>
        <label>WSDL Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Whitelisted_IPs__c</fullName>
        <inlineHelpText>OK to input multiple IP addresses. 

If multiple addresses, each address must be fully qualified, and must be separated by a comma. (

Example: 10.10.10.10,  192.168.1.254 )

 Note: RegEx is not supported.

MAX LENGTH: 1,500 Characters</inlineHelpText>
        <label>Whitelisted IPs</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_Connector__c</fullName>
        <label>3rd Party Connector</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>API_Connection_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MasterStream</fullName>
                </value>
                <value>
                    <fullName>SalesReach</fullName>
                </value>
                <value>
                    <fullName>Rev.io</fullName>
                </value>
                <value>
                    <fullName>BluLogix</fullName>
                </value>
                <value>
                    <fullName>NDA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>API Tracking</label>
    <listViews>
        <fullName>ALL</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>API_Client_ID__c</columns>
        <columns>API_Version__c</columns>
        <columns>API_Platform_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>ALL</label>
    </listViews>
    <listViews>
        <fullName>All_API_Tracking_Records</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Onboarding_Manager__c</columns>
        <columns>API_Set__c</columns>
        <columns>API_Connection_Type__c</columns>
        <columns>API_Platform_Type__c</columns>
        <columns>X3rd_Party_Connector__c</columns>
        <columns>Enablement_Kickoff_Meeting__c</columns>
        <columns>Actual_Go_Live__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All API Tracking Records</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Program_Tracking_Records</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Onboarding_Manager__c</columns>
        <columns>API_Client_ID__c</columns>
        <columns>API_Set__c</columns>
        <columns>API_Connection_Type__c</columns>
        <columns>API_Platform_Type__c</columns>
        <columns>X3rd_Party_Connector__c</columns>
        <columns>Enablement_Kickoff_Meeting__c</columns>
        <columns>Actual_Go_Live__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Program Tracking Records</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Connection_Type_Direct_Connect</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>API_Client_ID__c</columns>
        <columns>API_Set__c</columns>
        <columns>API_Connection_Type__c</columns>
        <columns>API_Platform_Type__c</columns>
        <columns>Onboarding_Manager__c</columns>
        <columns>Actual_Go_Live__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>API_Connection_Type__c</field>
            <operation>equals</operation>
            <value>Direct Connect</value>
        </filters>
        <label>Connection Type - Direct Connect</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Connection_Type_Third_Party</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Onboarding_Manager__c</columns>
        <columns>API_Set__c</columns>
        <columns>API_Platform_Type__c</columns>
        <columns>API_Connection_Type__c</columns>
        <columns>X3rd_Party_Connector__c</columns>
        <columns>Enablement_Kickoff_Meeting__c</columns>
        <columns>Actual_Go_Live__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>API_Connection_Type__c</field>
            <operation>equals</operation>
            <value>Third Party</value>
        </filters>
        <label>Connection Type - Third Party</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Platform_CSI</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Onboarding_Manager__c</columns>
        <columns>API_Set__c</columns>
        <columns>API_Connection_Type__c</columns>
        <columns>API_Platform_Type__c</columns>
        <columns>X3rd_Party_Connector__c</columns>
        <columns>Enablement_Kickoff_Meeting__c</columns>
        <columns>Actual_Go_Live__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>API_Platform_Type__c</field>
            <operation>equals</operation>
            <value>CSI</value>
        </filters>
        <label>Platform - CSI</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Platform_Flow_Designer</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Onboarding_Manager__c</columns>
        <columns>API_Set__c</columns>
        <columns>API_Connection_Type__c</columns>
        <columns>API_Platform_Type__c</columns>
        <columns>X3rd_Party_Connector__c</columns>
        <columns>Enablement_Kickoff_Meeting__c</columns>
        <columns>Actual_Go_Live__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>API_Platform_Type__c</field>
            <operation>equals</operation>
            <value>Flow Designer</value>
        </filters>
        <label>Platform - Flow Designer</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Platform_MuleSoft</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Onboarding_Manager__c</columns>
        <columns>API_Set__c</columns>
        <columns>API_Connection_Type__c</columns>
        <columns>API_Platform_Type__c</columns>
        <columns>X3rd_Party_Connector__c</columns>
        <columns>Enablement_Kickoff_Meeting__c</columns>
        <columns>Actual_Go_Live__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>API_Platform_Type__c</field>
            <operation>equals</operation>
            <value>MuleSoft</value>
        </filters>
        <label>Platform - MuleSoft</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>AT-{000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>API Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Mandatory_Field_Connector_Client_MechID</fullName>
        <active>true</active>
        <description>When “API Connection Type” is “Third Party”, the field &quot;Connector Client MechID &quot; is required.</description>
        <errorConditionFormula>AND(ISPICKVAL(API_Connection_Type__c, &quot;Third Party&quot;), not(ISBLANK (Prod_Profile_Requested__c)),
ISBLANK (Connector_Client_MechID__c))</errorConditionFormula>
        <errorDisplayField>Connector_Client_MechID__c</errorDisplayField>
        <errorMessage>The Connector Client_MechID field is required when API Connection Type is Third Party</errorMessage>
    </validationRules>
</CustomObject>